--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,21 @@
 body{
-    color: deeppink;
+    color: #333;
     text-align: center;
     font-family: "Arial";
+    background-color: white;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 } 
+
+#countainer{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #333;
+    margin: 0 auto;
+}
+
+#countainer h1{
+    font-size: 20px;
+}
