--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,24 @@
 body{
 
-    color: #333;
-
+    color: #1e1f24;
+    background: #333;
     text-align: center;
     font-family: "Arial";
-    background-color: white;
     font-size: 16px;
     margin: 0;
     padding: 0;
 } 
 #cabecera{
-    width: 100%;
-    background: #33A;
+    background: #374888;
     box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -35,4 +37,8 @@ body{
 
 #countainer h1{
     font-size: 20px;
+}
+#post{
+    background:white;
+    padding: 1em;
 }
