Se hicieron modificaciones en el footer del archivo se agrego fondo azul y un corazon en la rama footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,3 +36,13 @@ body{
 #countainer h1{
     font-size: 20px;
 }
+
+#footer{
+    width: 72%;
+    background: rgb(1, 165, 224);
+    text-align: center;
+    color: black;
+    padding: 0.5em;
+    margin: auto;
+
+}
